# sigmaepsilon.deepdict

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_pytest_cov.sh  run_tests_with_coverage.sh  setup.py  tox.ini
.circleci/: config.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  global_refs.rst  guide.md  highlights.rst  index.rst  user_guide.ipynb
docs/source/_static/: custom.css
docs/source/api/: api_deepdict.rst  api_utils.rst  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: getting_started.rst  index.rst  installation.rst  user_guide.ipynb
examples/: basics.ipynb  full_example.ipynb  full_example_latexdocs.tex  full_example_pylatex.tex
src/ldd/: __init__.py  ldd.py
src/linkeddeepdict/: __init__.py  linkeddeepdict.py
src/sigmaepsilon/deepdict/: __init__.py  deepdict.py  exceptions.py  utils.py
src/sigmaepsilon/deepdict/tools/: __init__.py
tests/: test_behaviour.py  test_compliance.py  test_delitem.py  test_joining_and_leaving.py  test_locking.py  test_missing.py  test_pickling.py  test_setitem.py  test_tools.py  test_types.py  test_utils.py  test_wrap.py
