[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigmaepsilon.deepdict"
version = "1.2.4"
description = "Common developer utilities for Python projects."
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3 :: Only",
        "Operating System :: OS Independent",
]
readme = "README.md"
authors = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
maintainers = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
license = "MIT"
keywords = ["data structures", "dictionary", "Python", "tree"]
homepage = "https://github.com/sigma-epsilon/sigmaepsilon.deepdict"
repository = "https://github.com/sigma-epsilon/sigmaepsilon.deepdict"
documentation = "https://sigmaepsilondeepdict.readthedocs.io/en/latest/?badge=latest"
packages = [{ include = "sigmaepsilon", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sigmaepsilon-core = "^1.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
ipykernel = "^6.29.2"
asciitree = "^0.3.3"
tornado = "^6.4"

[tool.poetry.group.test.dependencies]
coverage = "^7.4.1"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
asciitree = "^0.3.3"
tornado = ">=6.3.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
ipython = "^8.21.0"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.3"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinx-inline-tabs = "^2023.4.21"
pydata-sphinx-theme = "^0.15.2"
tornado = ">=6.3.3"
